--- a/jhakanaka/index.html
+++ b/jhakanaka/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;500&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
+      <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
@@ -28,24 +28,37 @@
         },
       };
     </script>
-    <title>Document</title>
+    <title>Sifat Production</title>
   </head>
   <body>
     <!-- navBar -->
   <nav class="  bg-white h-20 fixed top-0 right-0 left-0  ">
    
-    <div class="flex justify-between items-center  h-20 w-full max-w-5xl mx-auto font-bebas ">
-      <a href="#" class=" text-xl">Jhaka naka production</>
+    <div class="flex justify-between items-center  h-20 w-full max-w-5xl mx-auto font-bebas px-5">
+      <a href="#" class=" text-xl">sifat production</>
       <ul class="flex text-lg gap-8 ">
         <a href="#">About us</a>
-        <a href="#">Our movies </a>
+        <a href="#">Our works </a>
         <a href="#">Services</a>
       </ul>
     </div>
   </nav>
  <!-- banner -->
- <section class="bg-red-400 h-screen pt-20" >
-<h1>hello sifat</h1>
+ <section class=" h-screen pt-20 bg-[url('./images/banner.jpg')] bg-cover" >
+
+
+ <div class="h-full w-full max-w-5xl mx-auto px-5 flex items-center   ">
+ 
+  <div class="font-bebas">
+    <h2 class="text-white text-lg">Movie production studio</h2>
+    <h3 class="text-7xl text-white">Films MAde to</h3>
+    <h4 class="text-7xl text-yellow ">Perfection</h4>
+    <p class="font-montserrat text-white max-w-lg">Unleash the Magic: Where Dreams Meet the Silver Screen - Your Gateway to Cinematic Excellence!</p>
+    <button>Discover more</button>
+  </div>
+
+
+ </div>
 
 
 
