hero section finish

--- a/jhakanaka/index.html
+++ b/jhakanaka/index.html
@@ -35,7 +35,7 @@
   <nav class="  bg-white h-20 fixed top-0 right-0 left-0  ">
    
     <div class="flex justify-between items-center  h-20 w-full max-w-5xl mx-auto font-bebas px-5">
-      <a href="#" class=" text-xl">sifat production</>
+      <a href="#" class=" text-xl hover:text-black hover:text-xlxl hover:border-2 hover:p-1 hover:bg-yellow transition-all ">sifat production</a>
       <ul class="flex text-lg gap-8 ">
         <a href="#">About us</a>
         <a href="#">Our works </a>
@@ -43,8 +43,9 @@
       </ul>
     </div>
   </nav>
+  <main>
  <!-- banner -->
- <section class=" h-screen pt-20 bg-[url('./images/banner.jpg')] bg-cover" >
+ <section class=" h-screen pt-20 bg-[url('./images/banner.jpg')] sm:bg-contain md:bg-cover lg:bg-cover bg-no-repeat w-full " >
 
 
  <div class="h-full w-full max-w-5xl mx-auto px-5 flex items-center   ">
@@ -53,15 +54,34 @@
     <h2 class="text-white text-lg">Movie production studio</h2>
     <h3 class="text-7xl text-white">Films MAde to</h3>
     <h4 class="text-7xl text-yellow ">Perfection</h4>
-    <p class="font-montserrat text-white max-w-lg">Unleash the Magic: Where Dreams Meet the Silver Screen - Your Gateway to Cinematic Excellence!</p>
-    <button>Discover more</button>
+    <p class="font-montserrat text-white max-w-lg mb-10">Unleash the Magic: Where Dreams Meet the Silver Screen - Your Gateway to Cinematic Excellence!</p>
+    <button class="font-babes border-2 border-white py-2 px-3 text-white text-lg hover:bg-yellow hover:border-yellow  hover:text-black transition-all">Discover more</button>
   </div>
-
-
  </div>
 
 
 
  </section>
+<!-- about us -->
+<section class="py-40">
+  <!--  -->
+<div class="border-2 border-black w-full max-w-5xl mx-auto ">
+<div class="flex">
+  <div class="w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-screen">
+
+  </div>
+  <div class="w-1/2 p-7  ">
+    <p class="font-bebas text-sm  pb-1">ABOUT US</p>
+    <p class="text-4xl font-bebas ">FIlming Experience</p>
+    <p class="text-4xl font-bebas  ">Just Got better</p> 
+    <button class="font-babes border-2 border-black py-2 px-3 text-black text-lg hover:bg-yellow hover:border-yellow  hover:text-black transition-all mt-32" >Discover more</button>
+
+  </div>
+</div>
+
+</div>
+
+</section>
+</main>
   </body>
 </html>
