--- a/jhakanaka/index.html
+++ b/jhakanaka/index.html
@@ -64,23 +64,44 @@
  </section>
 <!-- about us -->
 <section class="py-40">
-  <!--  -->
 <div class="border-2 border-black w-full max-w-5xl mx-auto ">
-<div class="flex">
-  <div class="w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-screen">
+<div class=" lg:flex p-5">
+  <div class=" w-full lg:w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-[500px] ">
 
   </div>
-  <div class="w-1/2 p-7  ">
-    <p class="font-bebas text-sm  pb-1">ABOUT US</p>
-    <p class="text-4xl font-bebas ">FIlming Experience</p>
-    <p class="text-4xl font-bebas  ">Just Got better</p> 
-    <button class="font-babes border-2 border-black py-2 px-3 text-black text-lg hover:bg-yellow hover:border-yellow  hover:text-black transition-all mt-32" >Discover more</button>
+  <div class=" w-full lg:w-1/2 p-5  ">
+    <p class="font-bebas text-lg  pb-1">ABOUT US</p>
+    <p class="text-7xl font-bebas ">FIlming Experience</p>
+    <p class="text-7xl font-bebas  ">Just Got better</p> 
+    <p class="font-montserrat mb-10">Experience the Magic of Cinematic Brilliance! Unveiling Blockbusters, Captivating Stories, and Awe-Inspiring Visuals. Your Journey into Extraordinary Films Begins Here. Lights, Camera, Entertainment!</p>
+    <button class="font-babes border-2 border-black py-2 px-3 text-black text-lg hover:bg-yellow hover:border-yellow  hover:text-black transition-all " >Discover more</button>
 
   </div>
 </div>
-
+<div class="grid md:grid-cols-3 p-5 gap-5">
+   <div>
+    <div class="bg-black h-1.5 w-full mb-2"></div>
+    <h1 class="text-6xl font-bebas">Our vision</h1>
+    <p class="text-lg font  montserrat">Unlock the Magic of Cinema: Your Gateway to Captivating Stories and Unforgettable Moments. Welcome to [Your Movie Production Company Name] - Where Dreams Come to Life on the Big Screen</p>
+   </div>
+   <div>
+    <div class="bg-black h-1.5 w-full mb-2"></div>
+    <h1 class="text-6xl font-bebas">Our mission</h1>
+    <p class="text-lg font  montserrat">Unlock the Magic of Cinema: Your Gateway to Captivating Stories and Unforgettable Moments. Welcome to [Your Movie Production Company Name] - Where Dreams Come to Life on the Big Screen</p>
+   </div>
+   <div>
+    <div class="bg-black h-1.5 w-full mb-2"></div>
+    <h1 class="text-6xl font-bebas">Our motto</h1>
+    <p class="text-lg font  montserrat">Unlock the Magic of Cinema: Your Gateway to Captivating Stories and Unforgettable Moments. Welcome to [Your Movie Production Company Name] - Where Dreams Come to Life on the Big Screen</p>
+   </div>
+   
 </div>
+</div>
+</section>
 
+<!-- ours movie -->
+<section class=" ">
+  
 </section>
 </main>
   </body>
