--- a/jhakanaka/index.html
+++ b/jhakanaka/index.html
@@ -59,14 +59,12 @@
   </div>
  </div>
 
-
-
  </section>
 <!-- about us -->
 <section class="py-40">
 <div class="border-2 border-black w-full max-w-5xl mx-auto ">
 <div class=" lg:flex p-5">
-  <div class=" w-full lg:w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-[500px] ">
+  <div class=" w-full lg:w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-[500px] bg-center ">
 
   </div>
   <div class=" w-full lg:w-1/2 p-5  ">
@@ -100,8 +98,41 @@
 </section>
 
 <!-- ours movie -->
-<section class=" ">
+<section class="bg-gray py-20 px-5 ">
+  <div class="w-full max-w-5xl mx-auto font-bebas mb-10">
+    <h2 class="text-white">our movies</h1>
+    <div class="flex justify-between items-center ">
+       <h1 class="text-7xl text-white">Movie collection</h1>
+       <button class="font-babes border-2 border-white py-2 px-3 text-white text-lg hover:bg-yellow hover:border-yellow  hover:text-black transition-all">Discover more</button>
+    </div>
+  </div>
+  <div class="grid md:grid-cols-2 lg:grid-cols-4 w-full max-w-5xl mx-auto gap-5">
+    <div class="border-2 border-white h-[700px]  md:[550px] lg:h-[400px] p-5">
+      <div class="bg-[url('./images/inception.jpg')] h-full w-full bg-cover bg-center">
+
+      </div>
+    </div>
+
+    <div class="border-2 border-white h-[700px]  md:[550px] lg:h-[400px] p-5">
+      <div class="bg-[url('./images/fractured.jpg')] h-full w-full bg-cover bg-center">
+
+      </div>
+    </div>
+
+    <div class="border-2 border-white h-[700px]  md:[550px] lg:h-[400px] p-5">
+      <div class="bg-[url('./images/interstellar.jpg')] h-full w-full bg-cover bg-center">
+
+      </div>
+    </div>
+
+    <div class="border-2 border-white h-[700px]  md:[550px] lg:h-[400px] p-5">
+      <div class="bg-[url('./images/tenet.jpg')] h-full w-full bg-cover bg-center">
+
+      </div>
+    </div>
   
+  </div>
+
 </section>
 </main>
   </body>
