--- a/jhakanaka/index.html
+++ b/jhakanaka/index.html
@@ -64,7 +64,8 @@
 <section class="py-40">
 <div class="border-2 border-black w-full max-w-5xl mx-auto ">
 <div class=" lg:flex p-5">
-  <div class=" w-full lg:w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-[500px] bg-center ">
+  <div class=" w-full lg:w-1/2  bg-[url('./images/camera-man.jpg')] bg-cover max-w-5xl h-[500px] bg-center flex justify-center items-end ">
+    <h1 class=" bg-white text-2xl font-bebas w-full mx-5 text-center px-3 py-3 rounded-md -mb-8 shadow-lg">23 years experience</h1>
 
   </div>
   <div class=" w-full lg:w-1/2 p-5  ">
