--- a/jhakanaka/index.html
+++ b/jhakanaka/index.html
@@ -135,6 +135,90 @@
   </div>
 
 </section>
+
+<!-- card section -->
+<section class="py-14 px-5">
+  <div class="text-center font-bebas">
+    <h1 class="text-lg  ">services</h1>
+    <h6 class="text-6xl ">what we offer</h6>
+  </div>
+  <div class="grid lg:grid-cols-4 grid-rows-2 w-full max-w-5xl mx-auto gap-5 mt-10">
+    <!-- 1 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <!-- 1 -->
+      <div class="bg-[url('./images/icons/3d-glasss.png')] w-[100px] h-[100px] bg-cover bg-center mx-auto  ">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 2 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/camera.png')] w-[100px] h-[100px] bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 3 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/count-down.png')] w-[100px] h-[100px] mt-1 bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 4 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/director-chair.png')] mt-2 w-[100px] h-[100px] bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 5 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/film.png')] mt-2 w-[100px] h-[100px] bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 6 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/rim.png')] w-[100px] h-[100px] bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 7 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/theater.png')] w-[100px] h-[100px] bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+    <!-- 8 -->
+    <div class="border-2 border-gray h-[300px]  md:[250px] lg:h-[250px] ">
+      <div class="bg-[url('./images/icons/cut-board.png')] mt-2 w-[100px] h-[100px] bg-cover bg-center mx-auto">
+
+      </div>
+      <h1 class="text-xl font-bebas text-center">3D MOVIES</h1>
+      <p class="text-lg font-bebas p-4">Ex quam platea aliquet viverra si dictumst lobortis quis aliquam dis eget. </p>
+    </div>
+  </div>
+</section>
 </main>
+<footer class="bg-[url('./images/footer-bg.jpg')] h-[300px] w-full bg-cover bg-center">
+  <h1 class="text-6xl font-bebas text-white text-left md:text-center pt-8">jhaka naka production</h1>
+  <p class="font-bebas text-center text-white text-lg mt-1">next level experience</p>
+  <p class="font- montserrat text-white text-center  mt-3">Feugiat nibh litora semper proin nullam facilisi </p>
+  <p class="font- montserrat text-white text-center ">volutpat ex ullamcorper.</p>
+
+  <p class=" text-white font-montserrat text- ">Copyright © 2021 Jhaka Naka Production, All rights reserved. Present by sifat sorkar</p>
+
+</footer>
   </body>
 </html>
